feat: add SEO optimizations with JSON-LD structured data and performance hints
- Add JSON-LD structured data for Article/BlogPosting schema
- Add BreadcrumbList schema for navigation
- Add performance hints (preconnect, dns-prefetch) for external resources
- Configurable via params.seo.structuredData and params.seo.performanceHints
- Support for additional preconnect domains configuration

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -142,6 +142,16 @@ params:
         # Available values: auto, light, dark
         default: auto
 
+    seo:
+        # Enable JSON-LD structured data (Article, BreadcrumbList)
+        structuredData: true
+        
+        # Enable performance hints (preconnect, dns-prefetch)
+        performanceHints: true
+        
+        # Additional domains for preconnect/dns-prefetch
+        preconnectDomains: []
+
     imageProcessing:
         cover:
             enabled: true
