--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -58,7 +58,7 @@ body:
     attributes:
       label: Link to Minimal Reproducible Example
       description: | 
-        Use [CaiJimmy/hugo-theme-stack-starter](https://github.com/CaiJimmy/hugo-theme-stack-starter) to create a minimal reproduction of the problem. 
+        Use the exampleSite in [Svtter/Fried-Rice](https://github.com/Svtter/Fried-Rice) as a template to create a minimal reproduction of the problem. 
         A minimal reproduction is required so that others can help debug your issue. If a report is vague (e.g. just a generic error message) and has no reproduction, it may be auto-closed. 
       placeholder: https://github.com/username/your-repository
     validations:
