--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Discussions
-    url: https://github.com/CaiJimmy/hugo-theme-stack/discussions
+  - name: Issues
+    url: https://github.com/Svtter/Fried-Rice/issues
     about: Please ask and answer questions here.
