--- a/theme.toml
+++ b/theme.toml
@@ -1,12 +1,12 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Stack"
+name = "Fried Rice"
 license = "GPL-3.0-only"
-licenselink = "https://github.com/CaiJimmy/hugo-theme-stack/blob/master/LICENSE"
-description = "Card-style Hugo theme designed for bloggers"
-homepage = "https://github.com/CaiJimmy/hugo-theme-stack"
-demosite = "https://demo.stack.jimmycai.com"
+licenselink = "https://github.com/Svtter/Fried-Rice/blob/main/LICENSE"
+description = "A modified Stack theme with enhanced SEO features"
+homepage = "https://github.com/Svtter/Fried-Rice"
+demosite = ""
 
 tags = ["blog", "responsive", "clean", "light", "dark", "personal"]
 
