feat: enhance structured data with WebSite, Organization, and FAQ schemas
- Add WebSite schema for search result enhancements with search action support
- Add Organization schema with comprehensive contact information and social links
- Enhance Article schema to support dynamic types (Article/BlogPosting/NewsArticle)
- Add FAQ schema for FAQ pages
- Add accessibility metadata for articles
- Add author social links to Article schema
- Configure schema types based on article section or frontmatter params

Configuration:
- Add organization contact point, address, and founding date options
- Add accessibility settings (accessMode, accessibilityFeature, summary)
- Support schemaType param in frontmatter for custom article types
- Support FAQ data in frontmatter for FAQ pages

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -143,7 +143,7 @@ params:
         default: auto
 
     seo:
-        # Enable JSON-LD structured data (Article, BreadcrumbList)
+        # Enable JSON-LD structured data (Article, BreadcrumbList, etc.)
         structuredData: true
         
         # Enable performance hints (preconnect, dns-prefetch)
@@ -151,6 +151,36 @@ params:
         
         # Additional domains for preconnect/dns-prefetch
         preconnectDomains: []
+
+        # Organization schema configuration
+        organization:
+            # Social media links for sameAs
+            sameAs: []
+            
+            # Contact point for organization
+            contactPoint:
+                type: "customer support"
+                email:
+                telephone:
+                areaServed: "Worldwide"
+                availableLanguage: "en, zh"
+            
+            # Organization address
+            address:
+                streetAddress:
+                addressLocality:
+                addressRegion:
+                postalCode:
+                addressCountry:
+            
+            # Organization founding date
+            foundingDate:
+
+        # Accessibility metadata for articles
+        accessibility:
+            accessMode: "textual,visual"
+            accessibilityFeature: "alternativeText,readingOrder"
+            summary: "The content is accessible for screen readers and keyboard navigation."
 
     imageProcessing:
         cover:
